@@ -145,4 +145,7 @@ THANKS
   To Michael R. Wolf for pointing out that Wikipedia and the ECMA standard
   use faint instead of dark as the name of attribute 2.
 
+  To openmethods.com voice solutions for contributing PUSHCOLOR, POPCOLOR,
+  and LOCALCOLOR support.
+
   To Larry Wall, as always, for Perl.
